# serializer version: 1
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_avatars_enabled_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Avatars enabled',
  })
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_avatars_enabled_state]
  'on'
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_debug_enabled_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Debug enabled',
  })
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_debug_enabled_state]
  'off'
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_filelocking_enabled_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Filelocking enabled',
  })
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_filelocking_enabled_state]
  'on'
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_previews_enabled_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Previews enabled',
  })
# ---
# name: test_async_setup_entry[binary_sensor.my_nc_url_local_previews_enabled_state]
  'on'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_5_minutes_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of active users last 5 minutes',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_5_minutes_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_day_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of active users last day',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_day_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_hour_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of active users last hour',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_active_users_last_hour_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_files_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of files',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_files_state]
  '6783'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_group_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of group shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_group_shares_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_link_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of link shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_link_shares_state]
  '2'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_local_storages_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of local storages',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_local_storages_state]
  '1'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_mail_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of mail shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_mail_shares_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_other_storages_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of other storages',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_other_storages_state]
  '1'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_passwordless_link_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of passwordless link shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_passwordless_link_shares_state]
  '2'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_room_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of room shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_room_shares_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_received_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of shares received',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_received_state]
  '1'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_sent_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of shares sent',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_sent_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_shares_state]
  '2'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_storages_at_home_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of storages at home',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_storages_at_home_state]
  '2'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_storages_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of storages',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_storages_state]
  '4'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_user_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of user',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_user_shares_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Amount of user shares',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_user_shares_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_amount_of_user_state]
  '2'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_apps_installed_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Apps installed',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_apps_installed_state]
  '41'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cache_memory_size_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Cache memory size',
    'unit_of_measurement': <UnitOfInformation.MEGABYTES: 'MB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cache_memory_size_state]
  '0.175296'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_15_minutes_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local CPU Load last 15 minutes',
    'unit_of_measurement': 'load',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_15_minutes_state]
  '1.45263671875'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_1_minute_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local CPU Load last 1 minute',
    'unit_of_measurement': 'load',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_1_minute_state]
  '2.06640625'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_5_minutes_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local CPU Load last 5 minutes',
    'unit_of_measurement': 'load',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_cpu_load_last_5_minutes_state]
  '1.58447265625'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_size_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Database size',
    'unit_of_measurement': <UnitOfInformation.MEGABYTES: 'MB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_size_state]
  '4.784128'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_type_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Database type',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_type_state]
  'sqlite3'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_version_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Database version',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_database_version_state]
  '3.40.1'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_memory_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Free memory',
    'unit_of_measurement': <UnitOfInformation.GIGABYTES: 'GB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_memory_state]
  '6.75328'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_space_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Free space',
    'unit_of_measurement': <UnitOfInformation.GIGABYTES: 'GB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_space_state]
  '32.769138688'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_swap_memory_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Free swap memory',
    'unit_of_measurement': <UnitOfInformation.GIGABYTES: 'GB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_free_swap_memory_state]
  '10.484736'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_max_execution_time_attributes]
  ReadOnlyDict({
    'device_class': 'duration',
    'friendly_name': 'my.nc_url.local PHP max execution time',
    'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_max_execution_time_state]
  '3600'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_memory_limit_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local PHP memory limit',
    'unit_of_measurement': <UnitOfInformation.MEGABYTES: 'MB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_memory_limit_state]
  '536.870912'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_upload_maximum_filesize_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local PHP upload maximum filesize',
    'unit_of_measurement': <UnitOfInformation.MEGABYTES: 'MB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_upload_maximum_filesize_state]
  '536.870912'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_version_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local PHP version',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_php_version_state]
  '8.2.18'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_system_theme_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local System theme',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_system_theme_state]
  ''
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_system_version_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local System version',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_system_version_state]
  '28.0.4.1'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_total_memory_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Total memory',
    'unit_of_measurement': <UnitOfInformation.GIGABYTES: 'GB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_total_memory_state]
  '30.728192'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_total_swap_memory_attributes]
  ReadOnlyDict({
    'device_class': 'data_size',
    'friendly_name': 'my.nc_url.local Total swap memory',
    'unit_of_measurement': <UnitOfInformation.GIGABYTES: 'GB'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_total_swap_memory_state]
  '10.484736'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_updates_available_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Updates available',
    'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_updates_available_state]
  '0'
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_webserver_attributes]
  ReadOnlyDict({
    'friendly_name': 'my.nc_url.local Webserver',
  })
# ---
# name: test_async_setup_entry[sensor.my_nc_url_local_webserver_state]
  'Apache/2.4.57 (Debian)'
# ---
# name: test_async_setup_entry[update.my_nc_url_local_none_attributes]
  ReadOnlyDict({
    'auto_update': False,
    'entity_picture': 'https://brands.home-assistant.io/_/nextcloud/icon.png',
    'friendly_name': 'my.nc_url.local None',
    'in_progress': False,
    'installed_version': '28.0.4.1',
    'latest_version': '28.0.4.1',
    'release_summary': None,
    'release_url': 'https://nextcloud.com/changelog/#28-0-4',
    'skipped_version': None,
    'supported_features': <UpdateEntityFeature: 0>,
    'title': None,
  })
# ---
# name: test_async_setup_entry[update.my_nc_url_local_none_state]
  'off'
# ---
